[gd_scene load_steps=38 format=2]

[ext_resource path="res://Main/Game.gd" type="Script" id=1]
[ext_resource path="res://Source/VFX/unshaded.tres" type="Material" id=2]
[ext_resource path="res://Healthbar/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main/HUD.gd" type="Script" id=4]
[ext_resource path="res://Main/Advises.gd" type="Script" id=5]
[ext_resource path="res://Source/SFX/WaveUp.wav" type="AudioStream" id=6]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://Source/Images/VirtualJoystickPack/LargeHandleFilled.png" type="Texture" id=9]
[ext_resource path="res://Source/Images/VirtualJoystickPack/JoystickSplitted.png" type="Texture" id=10]
[ext_resource path="res://Source/Images/VirtualJoystickPack/Joystick.png" type="Texture" id=11]
[ext_resource path="res://Source/Images/VirtualJoystickPack/SmallHandleFilled.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 560, 100 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 560, 100 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 840, 100 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 840, 100 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 0.1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 360 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 640, 1 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Source/VFX/RawFonts/Kenney Pixel.ttf"

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Source/VFX/RawFonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://Source/VFX/RawFonts/Kenney Pixel.ttf"

[sub_resource type="DynamicFont" id=22]
size = 48
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Source/VFX/RawFonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = SubResource( 14 )

[sub_resource type="DynamicFont" id=11]
size = 56
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://Source/VFX/RawFonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=24]
size = 56
font_data = SubResource( 23 )

[sub_resource type="CircleShape2D" id=26]
radius = 184.71

[sub_resource type="CanvasItemMaterial" id=25]
light_mode = 1

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Source/VFX/RawFonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=15]
size = 64
font_data = SubResource( 17 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 10, 10, 10, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "advice" ],
"method": "change_camera_target"
}, {
"args": [ "player" ],
"method": "change_camera_target"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "block_player_actions"
}, {
"args": [ true ],
"method": "block_player_actions"
}, {
"args": [ true ],
"method": "block_player_actions"
}, {
"args": [ true ],
"method": "block_player_actions"
}, {
"args": [ true ],
"method": "block_player_actions"
}, {
"args": [ false ],
"method": "block_player_actions"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "player_invulnerable"
}, {
"args": [ true ],
"method": "player_invulnerable"
}, {
"args": [ true ],
"method": "player_invulnerable"
}, {
"args": [ true ],
"method": "player_invulnerable"
}, {
"args": [ true ],
"method": "player_invulnerable"
}, {
"args": [ false ],
"method": "player_invulnerable"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "lock_camera"
}, {
"args": [ false ],
"method": "lock_camera"
} ]
}

[sub_resource type="Curve2D" id=20]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -200, -200, 0, 0, 0, 0, 1480, -200, 0, 0, 0, 0, 1480, 920, 0, 0, 0, 0, -200, 920, 0, 0, 0, 0, -200, -200 )
}

[node name="Game" type="Node" groups=["Game"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -50.0, 640.0 ]
}
NEW_WAVE_SOUND = ExtResource( 6 )
NEW_WAVE_VOLUME = -7.0

[node name="BordersImpulse" type="Node" parent="."]

[node name="Left" type="Area2D" parent="BordersImpulse"]
position = Vector2( -100, 360 )
rotation = 1.5708
collision_layer = 0
collision_mask = 0
space_override = 1
gravity_vec = Vector2( 5, 0 )
gravity = -50.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordersImpulse/Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="BordersImpulse"]
position = Vector2( 1380, 360 )
rotation = -1.5708
collision_layer = 0
collision_mask = 0
space_override = 1
gravity_vec = Vector2( 5, 0 )
gravity = 50.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordersImpulse/Right"]
shape = SubResource( 5 )

[node name="Up" type="Area2D" parent="BordersImpulse"]
position = Vector2( 640, -100 )
rotation = 3.14159
collision_layer = 0
collision_mask = 0
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 5 )
gravity = -50.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordersImpulse/Up"]
shape = SubResource( 6 )

[node name="Down" type="Area2D" parent="BordersImpulse"]
position = Vector2( 640, 820 )
collision_layer = 0
collision_mask = 0
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 5 )
gravity = 50.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordersImpulse/Down"]
shape = SubResource( 7 )

[node name="PlayerLimits" type="Node" parent="."]

[node name="Left" type="StaticBody2D" parent="PlayerLimits"]
position = Vector2( 0, 360 )
collision_layer = 64
collision_mask = 0
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLimits/Left"]
shape = SubResource( 2 )

[node name="Right" type="StaticBody2D" parent="PlayerLimits"]
position = Vector2( 1280, 360 )
collision_layer = 64
collision_mask = 0
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLimits/Right"]
shape = SubResource( 2 )

[node name="Up" type="StaticBody2D" parent="PlayerLimits"]
position = Vector2( 640, 0 )
collision_layer = 64
collision_mask = 0
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLimits/Up"]
shape = SubResource( 4 )

[node name="Down" type="StaticBody2D" parent="PlayerLimits"]
position = Vector2( 640, 720 )
collision_layer = 64
collision_mask = 0
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLimits/Down"]
shape = SubResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 4 )

[node name="UI" type="Control" parent="HUD"]
pause_mode = 1
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreText" type="Label" parent="HUD/UI"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 13 )
text = "Score"
align = 1
valign = 1

[node name="HealthText" type="Label" parent="HUD/UI"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
margin_left = 75.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 9 )
text = "Health"
align = 1
valign = 1

[node name="EnemiesText" type="Label" parent="HUD/UI"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
anchor_right = 1.0
margin_left = 1029.0
margin_top = 20.0
margin_right = -75.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 10 )
text = "Enemies"
align = 2
valign = 1

[node name="WaveText" type="Label" parent="HUD/UI"]
use_parent_material = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -225.0
custom_fonts/font = SubResource( 22 )
text = "Wave"
align = 1
valign = 1

[node name="HealthBar" parent="HUD/UI" instance=ExtResource( 3 )]
visible = true
use_parent_material = true
position = Vector2( 147, 100 )
scale = Vector2( 1, 1 )

[node name="EnemiesCount" type="Label" parent="HUD/UI"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -319.0
margin_top = 70.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 16 )
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ScoreCount" type="Label" parent="HUD/UI"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
anchor_right = 1.0
margin_left = 400.0
margin_top = 49.0
margin_right = -400.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 11 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="WaveCount" type="Label" parent="HUD/UI"]
use_parent_material = true
anchor_top = 0.986
anchor_right = 1.0
anchor_bottom = 0.986
margin_left = 403.0
margin_top = -83.92
margin_right = -397.0
margin_bottom = 0.0799561
custom_fonts/font = SubResource( 24 )
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="AimJoystick" parent="HUD/UI" groups=["AimJoystick"] instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -479.0
margin_top = -359.0
margin_right = -6.0
margin_bottom = -3.0
__meta__ = {
"_edit_group_": true
}
deadzone_size = 1.0
clampzone_size = 50.0
joystick_mode = 1
visibility_mode = 1
use_input_actions = false

[node name="Base" parent="HUD/UI/AimJoystick" index="0"]
anchor_left = 0.59
anchor_right = 0.59
margin_left = -120.07
margin_top = -123.0
margin_right = 119.93
margin_bottom = 117.0
rect_pivot_offset = Vector2( 120, 120 )
texture = ExtResource( 10 )
expand = true

[node name="Tip" parent="HUD/UI/AimJoystick/Base" index="0"]
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 8 )
rect_pivot_offset = Vector2( 80, 80 )
texture = ExtResource( 9 )
expand = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="HUD/UI"]
position = Vector2( 1136, 284 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 10 )
pressed = ExtResource( 10 )
shape = SubResource( 26 )
action = "view_enemy"
visibility_mode = 1

[node name="MoveJoystick" parent="HUD/UI" groups=["MoveJoystick"] instance=ExtResource( 7 )]
margin_left = 4.0
margin_top = -464.0
margin_right = 454.0
margin_bottom = -2.0
__meta__ = {
"_edit_group_": true
}
deadzone_size = 25.0
joystick_mode = 1
visibility_mode = 1

[node name="Base" parent="HUD/UI/MoveJoystick" index="0"]
anchor_left = 0.427
anchor_top = 0.632
anchor_right = 0.427
anchor_bottom = 0.632
margin_left = -100.15
margin_top = -99.984
margin_right = 99.85
margin_bottom = 100.016
texture = ExtResource( 11 )
expand = true

[node name="Tip" parent="HUD/UI/MoveJoystick/Base" index="0"]
texture = ExtResource( 12 )
expand = true

[node name="PauseMenu" type="Control" parent="HUD"]
pause_mode = 2
visible = false
modulate = Color( 15, 15, 15, 1 )
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="HUD/PauseMenu"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="Label" type="Label" parent="HUD/PauseMenu"]
modulate = Color( 15, 15, 15, 1 )
use_parent_material = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -24.0
margin_right = 60.0
margin_bottom = 24.0
text = "PAUSE"

[node name="Button" type="Button" parent="HUD/PauseMenu"]
modulate = Color( 15, 15, 15, 1 )
material = SubResource( 25 )
use_parent_material = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = 40.0
text = "main menu"
icon_align = 1

[node name="Score" type="Control" parent="HUD"]
visible = false
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="HUD/Score"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/Score"]
use_parent_material = true
anchor_right = 1.0
margin_top = 21.0
margin_bottom = 158.0

[node name="ScoreText" type="Label" parent="HUD/Score/VBoxContainer2"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
margin_right = 1280.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 13 )
text = "Score"
align = 1
valign = 2

[node name="ScoreCount" type="Label" parent="HUD/Score/VBoxContainer2"]
modulate = Color( 10, 10, 10, 1 )
material = ExtResource( 2 )
use_parent_material = true
margin_top = 53.0
margin_right = 1280.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 11 )
text = "0"
align = 1
autowrap = true
max_lines_visible = 2

[node name="LineEdit" type="LineEdit" parent="HUD/Score"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 331.0
margin_bottom = -331.0
size_flags_vertical = 0
align = 1
max_length = 10
placeholder_text = "TYPE YOUR NAME"
placeholder_alpha = 0.5
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Score"]
use_parent_material = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -183.0
margin_bottom = -25.0

[node name="WaveText" type="Label" parent="HUD/Score/VBoxContainer"]
use_parent_material = true
margin_right = 1280.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 22 )
text = "Wave"
align = 1
valign = 2

[node name="WaveCount" type="Label" parent="HUD/Score/VBoxContainer"]
use_parent_material = true
margin_top = 81.0
margin_right = 1280.0
margin_bottom = 158.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 24 )
text = "0"
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="Button" type="Button" parent="HUD/Score"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -172.0
margin_top = -48.0
text = "Continue"

[node name="Advises" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Advises"]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 2 )
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 15 )
text = "central advice"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Advises"]
autoplay = "RESET"
anims/RESET = SubResource( 18 )
anims/show = SubResource( 19 )

[node name="Position2D" type="Position2D" parent="Advises"]
position = Vector2( 640, 360 )

[node name="MobSpawnRange" type="Path2D" parent="."]
curve = SubResource( 20 )

[node name="PathFollow2D" type="PathFollow2D" parent="MobSpawnRange"]
position = Vector2( -200, -200 )
loop = false

[connection signal="pressed" from="HUD/PauseMenu/Button" to="HUD" method="_on_Button_pressed"]
[connection signal="text_entered" from="HUD/Score/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="HUD/Score/Button" to="." method="_on_Button_pressed"]

[editable path="HUD/UI/AimJoystick"]
[editable path="HUD/UI/MoveJoystick"]
